syntax="proto3";

option go_package = "./genproto/userpb";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc GetUsersList(GetUsersRequest) returns (GetUsersResponse);
}

message RegisterUserRequest {
    string user_name = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    string user_id = 1;
    string user_name = 2;
    string email = 3;
}

message LoginUserRequest {
    string user_name = 1;
    string password = 2;
}

message LoginUserResponse {
    string user_id = 1;
    string email = 2;
}

message GetUserByIdRequest {
    string user_id = 1;
}

message User {
    string user_id = 1;
    string user_name = 2;
    string email = 3; 
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated User list = 1;
}